crates/weft-snapshots/tests/snapshots/html-data/corpus-todo-list.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-todo-list as html-data
---
<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Tasks</title>
<style>
:root {
  --weft-space-xs: 4px;
  --weft-space-sm: 8px;
  --weft-space-md: 16px;
  --weft-space-lg: 24px;
  --weft-space-xl: 32px;
  --weft-radius-sm: 4px;
  --weft-radius-md: 8px;
  --weft-radius-pill: 999px;
  --weft-font-size-sm: 0.875rem;
  --weft-font-size-md: 1rem;
  --weft-font-size-lg: 1.25rem;
  --weft-font-size-xl: 1.75rem;
  --weft-color-white: #ffffff;
  --weft-color-ink: #1a1c21;
  --weft-color-blue-_root: #2563eb;
  --weft-color-red: #dc2626;
  --weft-color-action-primary: #2563eb;
  --weft-color-action-danger: #dc2626;
}
.weft-stack { display: flex; flex-direction: column; }
.weft-row { display: flex; flex-direction: row; }
.weft-grid { display: grid; }
[data-align="start"] { align-items: flex-start; }
[data-align="center"] { align-items: center; }
[data-align="end"] { align-items: flex-end; }
[data-align="stretch"] { align-items: stretch; }
[data-wrap] { flex-wrap: wrap; }
.weft-field label, .weft-toggle { display: flex; gap: 0.5em; }
.weft-field label { flex-direction: column; }
[hidden] { display: none !important; }
</style>
</head>
<body>
<main data-weft-id="todos" aria-label="Tasks">
  <h1 data-weft-id="title">Tasks</h1>
  <form data-weft-id="add-form" data-action="submit:todo.add">
    <div data-weft-id="add-row" class="weft-row" style="gap: var(--weft-space-sm)">
      <div class="weft-field">
        <label>
          <span>New task</span>
          <input data-weft-id="draft" type="text" value="">
        </label>
      </div>
      <button data-weft-id="add" type="submit" data-variant="primary" disabled>Add</button>
    </div>
  </form>
  <ul data-weft-id="list">
    <li data-weft-id="todo[0]">
      <label class="weft-toggle">
        <input data-weft-id="todo-done[0]" type="checkbox" checked>
        <span>Write spec</span>
      </label>
      <button data-weft-id="todo-remove[0]" type="button" data-action="press:todo.remove">Remove</button>
    </li>
    <li data-weft-id="todo[1]">
      <label class="weft-toggle">
        <input data-weft-id="todo-done[1]" type="checkbox">
        <span>Build parser</span>
      </label>
      <button data-weft-id="todo-remove[1]" type="button" data-action="press:todo.remove">Remove</button>
    </li>
  </ul>
  <div data-weft-id="summary" class="weft-row" style="gap: var(--weft-space-xs)">
    <p data-weft-id="remaining">1</p>
    <p data-weft-id="remaining-label">items left</p>
  </div>
</main>
</body>
</html>
